Adjusted some margins to avoid unevenness in the UI
Still need to change the character cutoffs of some panels because some text that could fit on them is being cut off

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -96,7 +96,7 @@
 
 /* classes section */
 .classes-section {
-  margin-bottom: 24px;
+  margin-bottom: 0;
 }
 
 .classes-toggle {
